Update: optimise img

--- a/index.html
+++ b/index.html
@@ -49,21 +49,19 @@
             <span>A</span>
             <span>T</span>
             <span>O</span>
-            <span>L</span>
             <span>R</span>
         </h1>
     </section>
 
     <div class="container mt-5">
         <div class="ser col-md-12">
-            <img src="jobclues.png" class="inp-img" style="float: left">
+            <img src="jobclues.webp" class="inp-img" style="float: left">
             <input id="text1" class="form-control" placeholder="Enter your first name">
-            <!--<label id="lu" style="color: red;visibility: hidden">Invilid</label><br><br>-->
             <button onclick="fn1()" class="btn" id="btn1">Search</button>
         </div>
         <div id="outout">
             <div id="inout">
-                <img src="img%20(2).png" id="in-img">
+                <img src="img.webp" id="in-img">
                 <p class="np">Name Postulator</p>
                 <div id="out"></div>
             </div>
